<resources>
    <string name="app_name">Company Drrbni</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Onbording Titles-->
    <string name="onboarding1_title">مرحبا</string>
    <string name="onboarding2_title">أنشر إعلانات التدريب</string>
    <string name="onboarding3_title">أختر متدربينك</string>
    <string name="onboarding4_title">أستعرض معارض الأعمال</string>
    <!-- Onbording Sub Titles-->
    <string name="onboarding1_subtitle">تطبيق درّبني يساعد الباحثين عن فرصة التدريب الميداني ويساعد الجهات التدريبية لتقديم الخدمة بتدريب الشباب والشابات وتهيئتهم لسوق العمل</string>
    <string name="onboarding2_subtitle">استقطب الطلاب من كافة الجامعات والكليات من شتى المجالات  وأعطائهم فرصة للتدريب الميداني </string>
    <string name="onboarding3_subtitle"> أختر الطلاب المناسبين الذين ترغب في تدريبهم بعد الأطلاع على معرض أعمالهم ومهارتهم وقبول طلبات التدريب الخاص بهم </string>
    <string name="onboarding4_subtitle">يمكنك الأطللاع على معارض الأعمال وفرزها حسب التخصص المطلوب </string>

    <!-- Login -->
    <string name="getStarted">البدء</string>
    <string name="login">تسجيل الدخول</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة المرور</string>


    <string name="title_activity_home">Company Drrbni</string>
    <string name="title_profile">الملف الشخصي</string>
    <string name="title_notifications">الاشعارات</string>
    <string name="title_categories">التصنيفات</string>
    <string name="title_home">الرئيسية</string>
    <string name="filter">الفلتر</string>
    <string name="sortBy">الترتيب حسب المنطقة</string>
    <string name="forgot_password">نسيت كلمة المرور</string>
    <string name="restore_password">أستعادة كلمة المرور</string>
    <string name="get_code">الحصول على رمز</string>
    <string name="verification_code">رمز التحقق</string>
    <string name="verification">التحقق</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="conf_password">تأكيد كلمة المرور الجديدة</string>
    <string name="name">الاسم</string>
    <string name="Complete_the_registration_process">إكمال عملية التسجيل</string>
    <string name="next">التالي</string>
    <string name="address">العنوان</string>
    <string name="Contact_Information">معلومات التواصل</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="link_facebook">رابط الفيسبوك</string>
    <string name="governorate">المحافظة</string>
    <string name="add_img">إضافة صورة</string>
    <string name="skip">تخطي</string>
    <string name="add_img_profile">إضافة صورة ملف شخصي</string>
    <string name="edit_img_profile">تعديل صورة ملف شخصي</string>
    <string name="take_picture">إلتقاط صورة</string>
    <string name="Choose_from_the_library">اختيار من المكتبة</string>
    <string name="chancel">إلغاء</string>
    <string name="ok">موافق</string>
    <string name="company_name">شركة المستقبل للتكنولوجيا</string>
    <string name="company_address">غزة - مفترق الصناعة</string>
    <string name="employment">تكنولوجيا المعلومات</string>
    <string name="edit_profile">تعديل الملف الشخصي</string>
    <string name="custom_item_post">عندما أقف أمام الله في نهاية حياتي ، أتمنى ألا يتبقى لديّ القليل من الموهبة وأستطيع القول ، لقد استخدمت كل ما أعطيتني إياه.</string>
    <string name="custom_item_date">5 فبراير</string>
    <string name="custom_item_name">شركة تكنولوجيا المعلومات</string>
    <string name="search">Search</string>
    <string name="job_name">اسم العمل</string>
    <string name="specialization">التخصص</string>
    <string name="job_link">رابط العمل</string>
    <string name="visit">زيارة</string>
    <string name="description">الوصف</string>
    <string name="edit_contact_information">تعديل معلومات التواصل</string>
    <string name="edit_address">تعديل العنوان</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="student_name">سعيد حازم دلول</string>
    <string name="university_name">الكلية الجامعية للعلوم التطبيقية</string>
    <string name="specialization_name">برمجيات وقواعد البيانات</string>
    <string name="gmail">Gmail</string>
    <string name="Send_a_training_request">أرسل طلب تدريب</string>
    <string name="visit_profile">زيارة الملف الشخصي</string>
    <string name="accept">قبول</string>
    <string name="not_accept">رفض</string>
    <string name="add_ads">اضافة اعلان تدريب</string>
    <string name="add">إضافة</string>
    <string name="required_profession">التخصص المطلوب</string>
    <string name="choose_specialty">اختيار التخصص</string>
    <string name="requirements">المتطلبات</string>
    <string name="publishing">نشر</string>
    <string name="name_ads">اسم الاعلان</string>
    <string name="address_name">اعلان تدريب رقم 1</string>
    <string name="required_profession_name">برمجيات وقواعد البيانات</string>
    <string name="edit">تعديل</string>
    <string name="major">التخصص</string>
    <string name="job_link_text">www.megafreelancer.com</string>


    <string-array name="specialties_array">
        <item>كل التخصصات</item>
        <item>تكنولوجيا المعلومات</item>
        <item>المحاسبة</item>
        <item>الصحافة والاعلام</item>
        <item>الهندسة</item>
        <item>التصميم والديكور</item>
        <item>التسويق</item>
        <item>البلديات</item>
    </string-array>

    <string-array name="universities_array">
        <item>كل الجامعات</item>
        <item>الكلية الجامعية للعلوم التطبيقية</item>
        <item>الجامعة الاسلامية</item>
        <item>جامعة الأزهر</item>
    </string-array>

</resources>