<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/_4sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_8sdp"
        >

        <ImageView
            android:id="@+id/dropDown"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_arrow_down" />


        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_16sdp"
            android:gravity="center_vertical|right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dropDown"
            app:layout_constraintTop_toTopOf="@+id/dropDown">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_16sdp"
                android:gravity="right"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:text="@string/custom_item_name"
                    android:textColor="@color/basic"
                    android:textSize="@dimen/_16sdp" />

                <TextView
                    android:id="@+id/post_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_sans_arabic_light"
                    android:text="@string/custom_item_date"
                    android:textColor="@color/title_text"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/company_avatar"
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:background="@drawable/corner_reduis"
                android:clipToOutline="true"
                tools:srcCompat="@tools:sample/avatars" />


        </LinearLayout>

        <TextView
            android:id="@+id/post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:fontFamily="@font/ibm_plex_sans_arabic_light"
            android:text="@string/custom_item_post"
            android:textColor="@color/title_text"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="@+id/linear"
            tools:layout_editor_absoluteX="11dp" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>