<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragments.AddJobFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:background="@color/basic"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                style="@style/toolbarTitle"
                android:text="@string/job_name"/>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_160sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:src="@drawable/add_image"
            android:padding="@dimen/_2sdp"
            android:background="@drawable/image_reduis" />



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/job_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_name"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/basic"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_job_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:text="@string/required_profession_name"
                    android:textColor="@color/basic"
                    android:textSize="@dimen/_16sdp"
                    android:layout_margin="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/job_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/major"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/major"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/basic"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_specialization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:text="@string/specialization_name"
                    android:textColor="@color/basic"
                    android:textSize="@dimen/_16sdp"
                    android:layout_margin="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/major" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/job_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_link"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/basic"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_job_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:text="@string/job_link_text"
                    android:textColor="@color/basic"
                    android:textSize="@dimen/_16sdp"
                    android:layout_margin="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/job_link" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginBottom="@dimen/_24sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/basic"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:text="@string/required_profession_name"
                    android:textColor="@color/basic"
                    android:textSize="@dimen/_16sdp"
                    android:layout_margin="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>