<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:background="@color/basic"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                style="@style/toolbarTitle"
                android:text="@string/name_ads"/>
        </androidx.appcompat.widget.Toolbar>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/job_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/basic"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/add_job_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:text="@string/edit"
                    android:textColor="@color/basic"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/job_name"
                    app:layout_constraintStart_toStartOf="parent" />


                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:text="@string/address_name"
                    android:textColor="@color/basic"
                    android:textSize="@dimen/_16sdp"
                    android:layout_margin="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/job_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/required_profession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/required_profession"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/basic"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/choose_specialty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:text="@string/edit"
                    android:textColor="@color/basic"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/required_profession"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_required_profession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:text="@string/required_profession_name"
                    android:textColor="@color/basic"
                    android:textSize="@dimen/_16sdp"
                    android:layout_margin="@dimen/_16sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/required_profession" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/basic"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/add_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:text="@string/edit"
                    android:textColor="@color/basic"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/description"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:text="@string/required_profession_name"
                    android:textColor="@color/basic"
                    android:textSize="@dimen/_16sdp"
                    android:layout_margin="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/requirements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/requirements"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/basic"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/add_requirements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:text="@string/edit"
                    android:textColor="@color/basic"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/requirements"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_requirements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                    android:text="@string/required_profession_name"
                    android:textColor="@color/basic"
                    android:textSize="@dimen/_16sdp"
                    android:layout_margin="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/requirements" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>